# neopz-python

./: .gitignore  CMakeLists.txt  MALHAMULTI.vtk  README.md  Transport.scal_vec.0.vtk  Transport.scal_vec.1.vtk  Transport.scal_vec.10.vtk  Transport.scal_vec.11.vtk  Transport.scal_vec.12.vtk  Transport.scal_vec.13.vtk  Transport.scal_vec.14.vtk  Transport.scal_vec.15.vtk  Transport.scal_vec.16.vtk  Transport.scal_vec.17.vtk  Transport.scal_vec.18.vtk  Transport.scal_vec.19.vtk  Transport.scal_vec.2.vtk  Transport.scal_vec.20.vtk  Transport.scal_vec.21.vtk  Transport.scal_vec.22.vtk  Transport.scal_vec.23.vtk  Transport.scal_vec.24.vtk  Transport.scal_vec.25.vtk  Transport.scal_vec.26.vtk  Transport.scal_vec.27.vtk  Transport.scal_vec.28.vtk  Transport.scal_vec.29.vtk  Transport.scal_vec.3.vtk  Transport.scal_vec.30.vtk  Transport.scal_vec.31.vtk  Transport.scal_vec.32.vtk  Transport.scal_vec.33.vtk  Transport.scal_vec.34.vtk  Transport.scal_vec.35.vtk  Transport.scal_vec.36.vtk  Transport.scal_vec.37.vtk  Transport.scal_vec.38.vtk  Transport.scal_vec.39.vtk  Transport.scal_vec.4.vtk  Transport.scal_vec.40.vtk  (+21 more)
auxiliary/: getmeshes.py
neopz.egg-info/: PKG-INFO  SOURCES.txt
src/: TPZTypedPythonIterator.h  TemplatedContainersBindings.h  TemplatedTopologyBindings.h  TypedPythonIterator.h  gmshreader.msh  neopz_bindings.cpp  test.py
src/neopz/: neopz_bindings.cpp
tests/: containers.py  exampleAnalyticSolution.py  exampleAnalyticSolution2.py  exampleElastoPlasticity.py  exampleMultiphysicsSimulation.py  exampleMultiphysicsSimulationREAL.py  exampleSBFEM.py  exampleSimulation.py  resultado.scal_vec.0.vtk
tests/geometric-mesh/: CooksMembrane_sbfemesh_16_1_1.txt  TopeMeshPT.msh  gmshreader.geo  gmshreader.msh  simple_2D.geo  simple_2D.msh  wellbore.geo  wellbore.msh
